--- a/projeto/historico.html
+++ b/projeto/historico.html
@@ -11,98 +11,118 @@
 
     <link rel="icon" type="image/x-icon" href="/imagens/channels4_profile.jpg">
     
-    <!-- BOOTSTRAP CSS -->
+    <!-- BOOTSTRAP CSS 5.3-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!--Link FontAwesome-->
     <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
     
 </head>
-<body>
+<body style="background-color: rgb(197, 190, 190)">
 
-        <!--Menu-->
-    <div class="container" id="Menu">
-        <nav class="navbar navbar-expand-lg navbar navbar-dark barra-pesquisa" style="background-color: rgb(75, 67, 67);">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse center-buttons" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                <a class="nav-link" href="index.html">Solicitação<span class="sr-only">(Página atual)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="minhasviagens.html">Minhas Viagens</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="viagens.html">Viagens</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="transporte.html">Transporte</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="imprimir.html">Imprimir</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="aprovacao.html">Aprovação</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="historico.html">Historico</a>
-                </li>
-            </ul>
-            </div>
-        </nav>
-    </div>
-
-    <div class="container-sm">
-        <div class="row g-3">
-            <div class="col-sm-3">
-                <label for="idField">ID</label>
-                <input type="text" class="form-control form-control-lg" id="idField" placeholder="ID">
-            </div>
-            <div class="col-sm-5">
-                <label for="nameField">Nome</label>
-                <input type="text" class="form-control form-control-lg" id="nameField" placeholder="Nome">
-            </div>
-            <div class="col-sm-4">
-                <label for="costCenterField">Centro de custo</label>
-                <input type="text" class="form-control form-control-lg" id="costCenterField" placeholder="Centro de custo">
-            </div>
-          </div>
-    </div>
-
-    <div class="container-sm">
-        <form>
-            <div class="form-row">
-                <div class="col-12">
-                    <label for="inputItinerario">Itinerário</label>
-                    <input type="text" class="form-control form-control-lg" id="inputItinerario" placeholder="Itinerário">
-                </div>                
+    <!--Linha do Título-->
+    <div class="container">
+        <form class="mb-2 mt-2">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-3 text-center mb-3 mb-md-0">
+                    <img src="../imagens/logo_idr_parana.png" width="270px" class="img-fluid" alt="logo IDR-Paraná">
+                </div>
+                <div class="col-12 col-md-9 text-center rounded border border-2 border-black bg-white mb-6 mb-md-0">
+                    <h1 class="custom-border pt-2 pb-1">HISTÓRICO</h1>
+                </div>
             </div>
         </form>
     </div>
 
-    <div class="container-sm">
+<!--Menu-->
+     <div class="container">
+        <nav class="navbar navbar-expand-lg bg-success rounded border border-2 border-black" data-bs-theme="dark">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Solicitação</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="minhasviagens.html">Minhas Viagens</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="viagens.html">Viagens</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="transporte.html">Transporte</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="imprimir.html">Imprimir</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="aprovacao.html">Aprovação</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="historico.html">Historico</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <hr>
+
+    <!-- 1° linha -->
+    <div class="container">
+        <div class="row g-3">
+            <div class="col-sm-3">
+                <label for="idField">ID</label>
+                <input type="text" class="form-control p-3 border border-2 border-black" id="idField" placeholder="ID">
+            </div>
+            <div class="col-sm-5">
+                <label for="nameField">Nome</label>
+                <input type="text" class="form-control p-3 border border-2 border-black" id="nameField" placeholder="Nome">
+            </div>
+            <div class="col-sm-4">
+                <label for="costCenterField">Centro de custo</label>
+                <input type="text" class="form-control p-3 border border-2 border-black" id="costCenterField" placeholder="Centro de custo">
+            </div>
+          </div>
+    </div>
+
+    <!-- 2° linha -->
+    <div class="container">
+        <form>
+            <div class="col-12">
+                <label for="inputItinerario">Itinerário</label>
+                <input type="text" class="form-control p-3 border border-2 border-black" id="inputItinerario" placeholder="Itinerário">
+            </div>                
+        </form>
+    </div>
+
+    <!-- 3° linha -->
+    <div class="container">
         <div class="row g-3">
             <div class="col-sm-3">
                 <label for="piField">Ponto Inicial:</label>
-                <input type="text" class="form-control form-control-lg" id="piField" placeholder="ID">
+                <input type="text" class="form-control p-3 border border-2 border-black" id="piField" placeholder="Ponto Inicial">
             </div>
             <div class="col-sm-5">
                 <label for="pfField">Ponto final:</label>
-                <input type="text" class="form-control form-control-lg" id="pfField" placeholder="Nome">
+                <input type="text" class="form-control p-3 border border-2 border-black" id="pfField" placeholder="Nome">
             </div>
             <div class="col-sm-4">
                 <label for="servidorField">Centro de custo</label>
-                <input type="text" class="form-control form-control-lg" id="servidorField" placeholder="Centro de custo">
+                <input type="text" class="form-control p-3 border border-2 border-black" id="servidorField" placeholder="Centro de custo">
             </div>
-          </div>
+        </div>
     </div>
 
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!--BOOTSTRAP JAVASCRIPT 5.3-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
